[tool.poetry]
name = "langchain cookbook"
version = "0.0.1"
description = "LangChain Cookbook"
authors = []
license = "MIT"


[tool.poetry.dependencies]
python = ">=3.10.0,<4.0"

[tool.poetry.group.docs.dependencies]
langchain = "*"
langchain-core = "*"
langchain-experimental = "*"
unstructured = "*"
pandas = "*"
chromadb = "*"
tiktoken = "*"
openai = "*"
autodoc_pydantic = "^1.8.0"
myst_parser = "^0.18.1"
nbsphinx = "^0.8.9"
sphinx = "^4.5.0"
sphinx-autobuild = "^2021.3.14"
sphinx_book_theme = "^0.3.3"
sphinx_rtd_theme = "^1.0.0"
sphinx-typlog-theme = "^0.8.0"
sphinx-panels = "^0.6.0"
toml = "^0.10.2"
myst-nb = "^0.17.1"
linkchecker = "^10.2.1"
sphinx-copybutton = "^0.5.1"
nbdoc = "^0.0.82"
